--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                 <img src="/images/gears.gif" height="50" alt="gear icon" />
             </p>
         </span>
-        <p>Error 404: client side webpage is unavailable at the moment.</p>
+        <p>Error 404: client side webpage information is unavailable at the moment.</p>
     </div>
 
     <!-- JavaScript -->
